# winter_school_riscv_2026

./: CMakeLists.txt  README.md  Постановка задачи на зимнюю практику.docx
.github/workflows/: ci.yaml  ping.yaml
src/: CMakeLists.txt  all_kmeans.h  base_kmeans.cpp  kmeans_uchar.cpp  kmeans_uchar16d.cpp  kmeans_uchar32d.cpp  student1_kmeans.cpp
tests/: CMakeLists.txt  kmeans_student1_tests.cpp  kmeans_uchar16d_tests.cpp  kmeans_uchar32d_new_tests.cpp  kmeans_uchar32d_tests.cpp  kmeans_uchar4d_tests.cpp
